--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,6 @@
 [submodule "simple-ipc"]
 	path = external/simple-ipc
 	url = https://github.com/nullworks/simple-ipc
-[submodule "external/MicroPather"]
-	path = external/MicroPather
-	url = https://github.com/nullworks/MicroPather
 [submodule "external/TF2_NavFile_Reader"]
 	path = external/TF2_NavFile_Reader
 	url = https://github.com/nullworks/TF2_NavFile_Reader
@@ -25,3 +22,6 @@
 [submodule "external/boost-cmake"]
 	path = external/boost-cmake
 	url = https://github.com/STEVE4git/boost-cmake.git
+[submodule "external/MicroPather"]
+	path = external/MicroPather
+	url = https://github.com/explowz/MicroPather.git
